switch to css page

--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@ price and also at acheapier price</br> also learners can access learning materia
     <div id="excel">
         <p>Welcome to maktaba</p>
         <p>connect with us</p>
+        <img src=""
         <p>privacy and police</p>
         <p>Resources</p>
         <P>News</P>
