--- a/homepage.html
+++ b/homepage.html
@@ -22,6 +22,11 @@
 
         </div>
     </div>
+
+    <div>
+
+        <input class="search"></input>
+    </div>
     <hr>
     <div class="list">
         <a href="#">Home</a>
