--- a/homepage.html
+++ b/homepage.html
@@ -21,13 +21,13 @@
             <a href="#">get started</a>
 
         </div>
-    </div>
+    </div >
 
-    <div>
+    <div class="search">
 
-        <input class="search"></input>
+        <input ></input>
     </div>
-    <hr>
+    
     <div class="list">
         <a href="#">Home</a>
         <a href="#">Exchange</a>
