--- a/exhange.html
+++ b/exhange.html
@@ -27,5 +27,29 @@
         </div>
         
     </div>
+    <div class="Exchange">
+        <div class="images">
+            <img src="./assets/images/song for another.jpg" alt="" >
+            <p>Title:Javascript</p>
+            <p>Author:STEVE</p>
+            <P>FOR EXCHANGE</P>
+            <button class="read_more">Read More</button>
+        </div>
+        <div class="images">
+            <img src="./assets/images/bookcover1.jpeg" alt="image 2" >
+            <p>Title:EATER</p>
+            <p>Author:STACY</p>
+            <P>FOR EXCHANGE</P>
+            <button class="read_more">Read More</button>
+        </div>
+        <div class="images">
+            <img src="./assets/images/pans labrynth.jpg" alt="image 3" >
+            <p>Title:POTTER</p>
+            <p>Author:KEVO</p>
+            <P>FOR EXCHANGE</P>
+            <button class="read_more">Read More</button>
+        </div>
+    
+    </div>
 </body>
 </html>
