--- a/exhange.html
+++ b/exhange.html
@@ -51,5 +51,29 @@
         </div>
     
     </div>
+    <div class="Exchange2">
+        <div class="images">
+            <img src="./assets/images/crack the code.jpeg" alt=""  >
+            <p>Title:Javascript</p>
+            <p>Author:STEVE</p>
+            <P>FOR EXCHANGE</P>
+            <button class="read_more">Read More</button>
+        </div>
+        <div class="images">
+            <img src="./assets/images/harry potter.jpg" alt="image 2">
+            <p>Title:EATER</p>
+            <p>Author:STACY</p>
+            <P>FOR EXCHANGE</P>
+            <button class="read_more">Read More</button>
+        </div>
+        <div class="images">
+            <img src="./assets/images/bookcover1.jpeg" alt="image 3">
+            <p>Title:POTTER</p>
+            <p>Author:KEVO</p>
+            <P>FOR EXCHANGE</P>
+            <button>Read More</button>
+        </div> 
+
+    </div>
 </body>
 </html>
