--- a/exhange.html
+++ b/exhange.html
@@ -75,5 +75,30 @@
         </div> 
 
     </div>
+    <div class="footer">
+        <div id="footers">
+          <p> Welcome to Maktaba</p> 
+          <p>Connect with us</p> 
+          <img src="./assets/images/fb1.png" alt="" >
+          <img src="./assets/images/intsaa.png" alt="">
+          <img src="./assets/images/twitter1.png" alt="">
+
+        </div>
+
+        <div id="footers">
+            <p>Privacy and policy</p>
+
+        </div>
+        <div id="footers">
+            <p>Resources</p>
+
+        </div>
+        <div id="footers">
+            <p>News</p>
+
+        </div>
+        
+
+    </div>
 </body>
 </html>
