--- a/exhange.html
+++ b/exhange.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/7c6aee25da.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Maktaba</title>
 </head>
@@ -35,6 +36,16 @@
             <P>FOR EXCHANGE</P>
             <button class="read_more">Read More</button>
         </div>
+        <div class="details">
+            <i class="fa-solid fa-xmark"></i><br>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>Name of exchanger:Stephen bosire</p>
+            <P>Phone Number:0786453256</P>
+            <p>Book to exchange with:In the downlow</p>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>terms of exchange:A return policy of three months.<br>down payment of 1000 refundable on return</p>
+
+        </div>
         <div class="images">
             <img src="./assets/images/bookcover1.jpeg" alt="image 2" >
             <p>Title:EATER</p>
@@ -42,12 +53,32 @@
             <P>FOR EXCHANGE</P>
             <button class="read_more">Read More</button>
         </div>
+        <div class="details">
+            <i class="fa-solid fa-xmark"></i><br>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>Name of exchanger:Stephen bosire</p>
+            <P>Phone Number:0786453256</P>
+            <p>Book to exchange with:In the downlow</p>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>terms of exchange:A return policy of three months.<br>down payment of 1000 refundable on return</p>
+
+        </div>
         <div class="images">
             <img src="./assets/images/pans labrynth.jpg" alt="image 3" >
             <p>Title:POTTER</p>
             <p>Author:KEVO</p>
             <P>FOR EXCHANGE</P>
             <button class="read_more">Read More</button>
+        </div>
+        <div class="details">
+            <i class="fa-solid fa-xmark"></i><br>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>Name of exchanger:Stephen bosire</p>
+            <P>Phone Number:0786453256</P>
+            <p>Book to exchange with:In the downlow</p>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>terms of exchange:A return policy of three months.<br>down payment of 1000 refundable on return</p>
+
         </div>
     
     </div>
@@ -59,12 +90,32 @@
             <P>FOR EXCHANGE</P>
             <button class="read_more">Read More</button>
         </div>
+        <div class="details">
+            <i class="fa-solid fa-xmark"></i><br>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>Name of exchanger:Stephen bosire</p>
+            <P>Phone Number:0786453256</P>
+            <p>Book to exchange with:In the downlow</p>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>terms of exchange:A return policy of three months.<br>down payment of 1000 refundable on return</p>
+
+        </div>
         <div class="images">
             <img src="./assets/images/harry potter.jpg" alt="image 2">
             <p>Title:EATER</p>
             <p>Author:STACY</p>
             <P>FOR EXCHANGE</P>
             <button class="read_more">Read More</button>
+        </div>
+        <div class="details">
+            <i class="fa-solid fa-xmark"></i><br>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>Name of exchanger:Stephen bosire</p>
+            <P>Phone Number:0786453256</P>
+            <p>Book to exchange with:In the downlow</p>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>terms of exchange:A return policy of three months.<br>down payment of 1000 refundable on return</p>
+
         </div>
         <div class="images">
             <img src="./assets/images/bookcover1.jpeg" alt="image 3">
@@ -73,6 +124,16 @@
             <P>FOR EXCHANGE</P>
             <button>Read More</button>
         </div> 
+        <div class="details">
+            <i class="fa-solid fa-xmark"></i><br>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>Name of exchanger:Stephen bosire</p>
+            <P>Phone Number:0786453256</P>
+            <p>Book to exchange with:In the downlow</p>
+            <img src="./assets/images/bookcover1.jpeg" alt="">
+            <p>terms of exchange:A return policy of three months.<br>down payment of 1000 refundable on return</p>
+
+        </div>
 
     </div>
     <div class="footer">
