--- a/about.html
+++ b/about.html
@@ -20,7 +20,13 @@
             </div>
         </h1>
     </div>
-   
+    <!--navbar-->
+    <div class="navbar">
+        <a href="#">Home </a> 
+        <a href="#">Exhange</a> 
+        <a href="#">Buy/Sell</a> 
+        <a href="#">About Us</a> 
+    </div>
 
 
 
