--- a/about.html
+++ b/about.html
@@ -28,6 +28,14 @@
         <a href="#">About Us</a> 
     </div>
 
+     <div class="center">
+ <img src="./assets/images/download (1).jpeg"alt="">
+          <P>Online books exchange is here to help people access books and also sell their their books at an easier <br>
+price and also at acheapier price</br> also learners can access learning materials at a cheaper price  helps savetime . maktaba ditable library catalog,<br> building   
+
+         towards a web page for every book ever publised</br></P>
+    </div>      
+
 
 
     
