--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     </div>
 
      <div class="center">
- <img src="./assets/images/download (1).jpeg"alt="">
+ <img src="./assets/images/download (1).jpeg"alt="" height="800px">
           <P>Online books exchange is here to help people access books and also sell their their books at an easier <br>
 price and also at acheapier price</br> also learners can access learning materials at a cheaper price  helps savetime . maktaba ditable library catalog,<br> building   
 
