--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
 
      <div class="center">
  <img src="./assets/images/download (1).jpeg"alt="" height="800px">
-          <P>Online books exchange is here to help people access books and also sell their their books at an easier <br>
-price and also at acheapier price</br> also learners can access learning materials at a cheaper price  helps savetime . maktaba ditable library catalog,<br> building   
-
-         towards a web page for every book ever publised</br></P>
+          <p id="">Maktaba is here to help people and mostly book lovers get access to books they want but at a cheaper price<br>
+        The  best part of maktaba is that you can also exchange books with another person and you can actually put conditions on the return policy<br>
+    Let maktaba be your online library/exchange platform and spare yourself the stress of spending alot of money on books<br>
+Maktaba saves you time and money.</p>
     </div>      
 
 
