add id us to class center

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
      <div class="center">
  <img src="./assets/images/download (1).jpeg"alt="" height="800px">
-          <p id="">Maktaba is here to help people and mostly book lovers get access to books they want but at a cheaper price<br>
+          <p id="us">Maktaba is here to help people and mostly book lovers get access to books they want but at a cheaper price<br>
         The  best part of maktaba is that you can also exchange books with another person and you can actually put conditions on the return policy<br>
     Let maktaba be your online library/exchange platform and spare yourself the stress of spending alot of money on books<br>
 Maktaba saves you time and money.</p>
