--- a/about.html
+++ b/about.html
@@ -34,7 +34,47 @@
         The  best part of maktaba is that you can also exchange books with another person and you can actually put conditions on the return policy<br>
     Let maktaba be your online library/exchange platform and spare yourself the stress of spending alot of money on books<br>
 Maktaba saves you time and money.</p>
-    </div>      
+    </div>   
+     <!--footer-->
+
+    <div class="footer">
+        <div class="item">
+            <h1>
+                <italic><b>Mak</b></italic><strong>taba</strong>
+            </h1>
+
+            <h4>Connect With Us:</h4>
+
+            <img height="22px" src="./assets/images/intsaa (2).png">
+            <img height="22px" src="./assets/images/fb1.png">
+            <img height="22px" src="./assets/images/twitter1.png">
+
+            </p>
+        </div>
+        <div class="item">
+            <h3>Resources</h3>
+            <h4>Newspapers</h4>
+            <h4>Journals</h4>
+            <h4>Magazines</h4>
+            
+        </div>
+        <div class="item">
+            <h3>News</h3>
+            <h4>Archives</h4>
+            <h4>Research</h4>
+            <h4>Aurthors and Blogs</h4>
+        </div>
+
+        <div class="item">
+            <h3>About Us</h3>
+            <h4>FAQs</h4>
+            <h4>Terms and Conditions</h4>
+            <h4>Privacy and Policy</h4>
+            
+
+        </div>
+
+    </div>   
 
 
 
