--- a/exhange.html
+++ b/exhange.html
@@ -38,7 +38,7 @@
             <p>Title:Javascript</p>
             <p>Author:STEVE</p>
             <P>FOR EXCHANGE</P>
-            <button class="read_more">Read More</button>
+            <button>Read More</button>
         </div>
         <div class="details">
             <i class="fa-solid fa-xmark"></i><br>
@@ -140,29 +140,45 @@
         </div>
 
     </div>
+  
+    <!--footer-->
+
     <div class="footer">
-        <div id="footers">
-            <p> Welcome to Maktaba</p>
-            <p>Connect with us</p>
-            <img src="./assets/images/fb1.png" alt="">
-            <img src="./assets/images/intsaa.png" alt="">
-            <img src="./assets/images/twitter1.png" alt="">
+        <div class="item">
+            <h1>
+                <italic><b>Mak</b></italic><strong>taba</strong>
+            </h1>
 
+            <h4>Connect With Us:</h4>
+
+            <img height="12px" src="./assets/images/intsaa.png">
+            <img height="12px" src="./assets/images/fb1.png">
+            <img height="12px" src="./assets/images/twitter1.png">
+
+            </p>
+        </div>
+        <div class="item">
+            <h3>Resources</h3>
+            <h4>Newspapers</h4>
+            <h4>Journals</h4>
+            <h4>Magazines</h4>
+            
+        </div>
+        <div class="item">
+            <h3>News</h3>
+            <h4>Archives</h4>
+            <h4>Research</h4>
+            <h4>Aurthors and Blogs</h4>
         </div>
 
-        <div id="footers">
-            <p>Privacy and policy</p>
+        <div class="item">
+            <h3>About Us</h3>
+            <h4>FAQs</h4>
+            <h4>Terms and Conditions</h4>
+            <h4>Privacy and Policy</h4>
+            
 
         </div>
-        <div id="footers">
-            <p>Resources</p>
-
-        </div>
-        <div id="footers">
-            <p>News</p>
-
-        </div>
-
 
     </div>
 
