--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
               </label>
             </div>
           
-            <div class="container" style="background-color: #867D2A">
+            <div class="container" style="background-color: white">
               <button type="button" class="cancelbtn">Cancel</button>
               <span class="psw">Forgot <a href="#">password?</a></span>
             </div>
